--- a/.github/workflows/Snake.yml
+++ b/.github/workflows/Snake.yml
@@ -8,22 +8,23 @@ on:
 
   push:
     branches:
-    - master
+    - main
 
 jobs:
   generate:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - name: generate snake.svg
-        uses: Platane/snk/svg-only@v2
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: dist/snake.svg
+          github_user_name: SamuelSoaresSilva
+          outputs: dist/github-contribution-grid-snake.svg
 
 
       - name: push snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v2.6.0
+        uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
           build_dir: dist
