--- a/.github/workflows/Snake.yml
+++ b/.github/workflows/Snake.yml
@@ -16,14 +16,14 @@ jobs:
     timeout-minutes: 10
 
     steps:
-      - name: generate snake.svg
+      - name: Generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: SamuelSoaresSilva
           outputs: dist/github-contribution-grid-snake.svg
 
 
-      - name: push snake.svg to the output branch
+      - name: Push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
